# active-program-induction-rl

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  FINAL_REPORT.md  LICENSE_NOTES.md  PLAN.md  PROGRESS.md  README.md  SAFETY.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  task.md  tsconfig.base.json
apps/cad-worker/: README.md  planter-recipe.json  requirements-optional.txt  runner.py  worker.py
apps/cad-worker/tests/: test_worker.py
apps/orchestrator/: requirements.txt
apps/orchestrator/skyfoundry/: __init__.py  assets.py  graph.py  main.py  models.py  providers.py  storage.py
apps/orchestrator/tests/: test_api.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Scene.tsx  Studio.tsx
apps/web/lib/: store.test.ts  (+1 more)
configs/: agent_loop.yaml  phase1_single_gpu.env.example
docs/: optional-integrations.md
docs/decisions/: 0001-deterministic-client-runtime.md  0002-configurable-agent-consensus.md
scripts/: cold_start_single_gpu.sh  export-glb.ts  generate_dataset_single_gpu.sh  install_verl_gpu.sh  render-project.ts  run-orchestrator.sh  seed-demo.ts  smoke_cpu.sh  train_verl_grpo_multigpu.sh  train_verl_grpo_passive_single_gpu.sh  train_verl_grpo_single_gpu.sh  validate-project.ts
src/active_program_induction/: __init__.py  agents.py  cli.py  dataset.py  dfa.py  env.py  junta.py  model_eval.py  model_eval_multiturn.py  prompts.py  scoring.py
tests/: test_core.py
tests/e2e/: manhattan-tower.spec.ts
(+4 files in other folders)
